# openvino.skills

./: README.md
gpu_plugin/dev_cliloader_analysis/: SKILL.md  SUMMARY.md  analyze_perf.py  classify_kernels.py
gpu_plugin/dev_code_review/: SKILL.md  SUMMARY.md  feature_gemma4_moe_analysis.md
gpu_plugin/dev_diffusion_gemma4/: diffusion_gemma_debug.md  diffusion_gemma_flow_kernel_cn.md  diffusion_gemma_flow_memory_cn.md  diffusion_gemma_moe_support_cn.md  diffusion_gemma_weight_shared_design.md  diffusion_gemma_weight_shared_implement.md  find_missing_deps.py  patch_summary_cn.md  source_list.txt  todo.list
gpu_plugin/dev_extract_kernels_from_ov/: README.md  SKILL.md  run.sh
gpu_plugin/dev_fuse_kernel/: SKILL.md
gpu_plugin/dev_gemm/: SKILL.md  dpas_reference.md  reference.md
gpu_plugin/dev_gemv/: SKILL.md
gpu_plugin/dev_gemv_opt/: SKILL.md
gpu_plugin/dev_gguf_support/: IMPLEMENT.md  OPTIMIZE_RESULT.md  SKILL.md  SUMMARY.md
gpu_plugin/dev_gguf_support_ovmx/: IMPLEMENT.md  KERNEL_RESULTS_cn.md  OPTIMIZE_RESULT.md  SKILL.md  SPEC.md  WEIGHT_REPACK_DESIGN_cn.md  WEIGHT_REPACK_RESULTS_cn.md
gpu_plugin/dev_gpu_acc_issue/: SKILL.md
gpu_plugin/dev_grouped_gemm/: SKILL.md  SUMMARY.md  max_variable_dim_as_arg.md
gpu_plugin/dev_kernel_migrate/: SKILL.md
gpu_plugin/dev_long_token_gpu_idle/: 32K_decode_latency.csv  SKILL.md  SUMMARY.md
gpu_plugin/dev_model_loading/: SKILL.md  SUMMARY_MEMORY.md  SUMMARY_NONE_MMAP.md  SUMMARY_SKILL_UPDATE.md  SUMMARY_USECASE.md  SUMMARY_USECASE_EN.md  SUMMARY_WINDOWS.md  Summary.md  Summary_Linux.md  code_style.md  framework_io_comparison.md  mmap_analysis.md  source_code_list.md
gpu_plugin/dev_moe/: SKILL.md  SUMMARY.md  moe_mixed_precision_shared_expert.md  qwen3_moe_i4_sym.md  reference.md  remote_machine.md
gpu_plugin/dev_moe_3bit/: KERNEL_DESIGN.md  KERNEL_REQUIREMENTS.txt  SKILL.md  SUMMARY.md  SUMMARY_DECOMPRESS.md  SUMMARY_NNCF_LORA_QAT.md  SUMMARY_ONEDNN_GPU_GEMM_TYPES.md  WORK_BREAKDOWN_3BIT.md  kernel_design_3bit.md  openvino_requirements.txt
gpu_plugin/dev_moe_mtp/: DETAILS.md  SKILL.md  moe_shared_expert.md
gpu_plugin/dev_new_primitive/: SKILL.md  gpu_plugin_operator_integration_comparison.md
gpu_plugin/dev_onednn_gemm/: OPTIMIZATION_TIPS.md  RESULT.md  SKILL.md  SUMMARY.md  opt_tips.txt  opt_tips_en.txt  reference.md  remote_machine.md
gpu_plugin/dev_onednn_gemm/tests/: CMakeLists.txt  build_and_run.sh  test_gemm_f16.cpp
gpu_plugin/dev_port_master_to_ovmx/: SKILL.md
gpu_plugin/dev_primitive_schedule/: PRIMITIVE_SCHEDULER_OPTIMIZATION_CN.md  PRIMITIVE_SCHEDULER_OPTIMIZATION_EN.md  SKILL.md  SUMMARY.md  SUMMARY_ADD_NEW_OCL_IMPL_CN.md  SUMMARY_EN.md  flowchart_enable_multi_impl.md  flowchart_overall_architecture.md  flowchart_runtime_switching.md  primitive_scheduler_flowcharts.drawio
gpu_plugin/dev_qwen3.5/: SKILL.md
gpu_plugin/dev_remote_debug_windows/: SKILL.md  build_openvino.bat  (+2 more)
gpu_plugin/dev_roofline_profiling/utils/: CMakeLists.txt  CMakeLists_dense_min.txt  analyze_diffusion_gemma_ptl_12xe.py  analyze_gemma4_12B_ptl_4xe.py  build_kernel_tables.py  build_model_report.py  build_remote.bat  cli_smoke.bat  configure_remote.bat  diag.bat  fc_o912_redo.bat  freq_probe.bat  ov_verbose_weight_analyze.py  pa_test_wrap.bat  parse_cm_pa_logs.py  parse_logs.py  patch_dense_decode.bat  patch_fc_o_sliding_S8192.bat  patch_gemma4_12B_extsizes.bat  patch_missing_gemma4_12B.bat  platforms.json  rerun_missing_31B.bat  rerun_missing_extkv.bat  roofline_report.py  run_diffusion_gemma_ptl_12xe.bat  run_diffusion_gemma_ptl_12xe_sdpa.bat  run_diffusion_gemma_ptl_12xe_suppl.bat  run_gdn_interval_sweep.bat  run_gdn_only_ptl.bat  run_gemma4_12B_fillgaps.bat  run_gemma4_12B_ptl_12xe.bat  run_gemma4_12B_ptl_12xe_cm_pa.bat  run_gemma4_12B_ptl_12xe_extsizes.bat  run_gemma4_12B_ptl_4xe.sh  run_gemma4_31B_extkv.bat  run_gemma4_31B_ptl_12xe.bat  run_gemma4_moe_ptl_12xe.bat  run_gemma4_moe_ptl_12xe_suppl.bat  run_pa_decode_flush_qwen3_asr.bat  run_pa_text_i8_qwen3_asr.bat  (+26 more)
gpu_plugin/dev_roofline_profiling/utils/fc_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/gdn_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/hw_probe/: gpu_info.c  mem_bw.c  run_bmg.sh
gpu_plugin/dev_roofline_profiling/utils/moe_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/pa_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/sdpa_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/small_ops_bench/: main.cpp
gpu_plugin/dev_roofline_profiling/utils/template/: SUMMARY_TEMPLATE.md
gpu_plugin/openvino_roofline_profiling_base/utils/: CMakeLists.txt  generate_metrics.py.example  generate_summary.py.example  ops_mapping.json.example  parse_logs_v2.py  run_all.sh.example  run_all.sh.template  run_all_ptl.bat.example  run_all_ptl.bat.template  run_config.sh.example
gpu_plugin/openvino_roofline_profiling_base/utils/moe_bench/: main.cpp
gpu_plugin/openvino_roofline_profiling_base/utils/pa_bench/: main.cpp
tools/: download_all_cpack.sh
(+2081 files in other folders)
